fix: #15
Also fixes JVM crashes when the server is under a heavy load and you have multiple threads in use in a script