@@ -91,6 +91,11 @@ tasks {
         // This is the only required configuration besides applying the plugin.
         // Your plugin's jar (or shadowJar if present) will be used automatically.
         minecraftVersion("1.21.5")
+
+        // Make sure runServer is ran with -add-opens=java.base/java.util=ALL-UNNAMED
+        jvmArgs(
+            "--add-opens=java.base/java.util=ALL-UNNAMED",
+        )
     }
     shadowJar {
         archiveBaseName.set("LuaLink")
